--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.2",
+    "react-spinners": "^0.13.8",
     "yup": "^1.3.2"
   },
   "devDependencies": {
