--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lancemeup_ticket_booking_system",
+  "name": "ticket_booking_system",
   "version": "0.1.0",
   "private": true,
   "scripts": {
